Resolves tdf#160626 - Preserve sorting in SvxStyleToolBoxControl

Inserts now up to 12 default styles and adds only user styles
that are not among the default

Change-Id: I60ea3e46092681a932cf3fe470c2ce9fb3553917
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176011
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>